# pandas

./: .tool-versions  README.md  data.csv  names.xlsx  pandaPlots.py  pandasReadWrite.py  pandasTutBasic.py  pyproject.toml
data/: data1.csv
