[tool.poetry]
name = "take1"
version = "0.1.0"
description = ""
authors = ["Milan Gupta <milangupta511@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.3.5"
numpy = "^1.21.5"
yfinance = "^0.1.67"
DateTime = "^4.3"
pandas-datareader = "^0.10.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
